--- a/ansible/playbooks/deployment/docker_open_project.yaml
+++ b/ansible/playbooks/deployment/docker_open_project.yaml
@@ -57,7 +57,7 @@
     - name: Deploy PostgreSQL container
       community.docker.docker_container:
         name: "{{ postgres_container_name }}"
-        hostname: openproject_postgres
+        hostname: postgres
         image: "{{ postgres_image }}"
         networks:
           - name: openproject_network
@@ -77,7 +77,7 @@
           - "8081:80"
         env:
           SECRET_KEY_BASE: "{{ lookup('env', 'openproject_secret_key') }}"
-          OPENPROJECT_DB_URL: "postgresql://openproject_postgres:5432/openproject_db"
+          OPENPROJECT_DB_URL: "postgresql://postgres:5432/openproject_db"
           OPENPROJECT_HOST__NAME: "{{ lookup('env', 'openproject_domain') }}"
           OPENPROJECT_HTTPS: "false"
           OPENPROJECT_DB_USERNAME: openproject
