Changed Open Project image

--- a/ansible/playbooks/deployment/docker_open_project.yaml
+++ b/ansible/playbooks/deployment/docker_open_project.yaml
@@ -5,7 +5,7 @@
   vars:
 
     openproject_container_name: openproject
-    openproject_image: openproject/community:13-slim
+    openproject_image: openproject/community:13
     postgres_container_name: openproject_postgres
     postgres_image: postgres:latest
 
