Changed HTTPS to true

--- a/ansible/playbooks/deployment/docker_open_project.yaml
+++ b/ansible/playbooks/deployment/docker_open_project.yaml
@@ -79,7 +79,7 @@
           SECRET_KEY_BASE: "{{ lookup('env', 'openproject_secret_key') }}"
           OPENPROJECT_DB_URL: "postgresql://postgres:5432/openproject_db"
           OPENPROJECT_HOST__NAME: "{{ lookup('env', 'openproject_domain') }}"
-          OPENPROJECT_HTTPS: "false"
+          OPENPROJECT_HTTPS: "true"
           OPENPROJECT_DB_USERNAME: openproject
           OPENPROJECT_DB_PASSWORD: "{{ lookup('env', 'openproject_db_password') }}"
         volumes:
