Added DATABASE_URL to force Open Project to use the external database instead of the internal one.

--- a/ansible/playbooks/deployment/docker_open_project.yaml
+++ b/ansible/playbooks/deployment/docker_open_project.yaml
@@ -78,6 +78,7 @@
         env:
           SECRET_KEY_BASE: "{{ lookup('env', 'openproject_secret_key') }}"
           OPENPROJECT_DB_URL: "postgresql://postgres:5432/openproject_db"
+          DATABASE_URL: postgresql://postgres:5432/openproject_db
           OPENPROJECT_HOST__NAME: "{{ lookup('env', 'openproject_domain') }}"
           OPENPROJECT_HTTPS: "true"
           OPENPROJECT_DB_USERNAME: openproject
