Changed database URL to add user and password

--- a/ansible/playbooks/deployment/docker_open_project.yaml
+++ b/ansible/playbooks/deployment/docker_open_project.yaml
@@ -77,12 +77,12 @@
           - "8081:80"
         env:
           SECRET_KEY_BASE: "{{ lookup('env', 'openproject_secret_key') }}"
-          OPENPROJECT_DB_URL: "postgresql://postgres:5432/openproject_db"
-          DATABASE_URL: postgresql://postgres:5432/openproject_db
+          #OPENPROJECT_DB_URL: "postgresql://postgres:5432/openproject_db"
+          DATABASE_URL: "postgresql://openproject:{{ lookup('env', 'openproject_db_password') }}@postgres:5432/openproject_db"
           OPENPROJECT_HOST__NAME: "{{ lookup('env', 'openproject_domain') }}"
           OPENPROJECT_HTTPS: "true"
-          OPENPROJECT_DB_USERNAME: openproject
-          OPENPROJECT_DB_PASSWORD: "{{ lookup('env', 'openproject_db_password') }}"
+          #OPENPROJECT_DB_USERNAME: openproject
+          #OPENPROJECT_DB_PASSWORD: "{{ lookup('env', 'openproject_db_password') }}"
         volumes:
           - "{{ openproject_assets_dir }}:/var/openproject/assets"
         networks:
