--- a/ansible/playbooks/deployment/docker_open_project.yaml
+++ b/ansible/playbooks/deployment/docker_open_project.yaml
@@ -5,7 +5,7 @@
   vars:
 
     openproject_container_name: openproject
-    openproject_image: openproject/openproject:15-slim
+    openproject_image: openproject/openproject:15
     postgres_container_name: openproject_postgres
     postgres_image: postgres:latest
 
