--- a/ansible/playbooks/deployment/docker_grafana.yaml
+++ b/ansible/playbooks/deployment/docker_grafana.yaml
@@ -30,12 +30,6 @@
         name: grafana
         state: absent
 
-    - name: Remove the old Grafana image
-      community.docker.docker_image:
-        name: grafana/grafana
-        state: absent
-      ignore_errors: true  # Ignore errors if the image is not present
-
     - name: Pull the latest Grafana image
       community.docker.docker_image:
         name: grafana/grafana:latest
@@ -65,6 +59,8 @@
           GF_AUTH_OAUTH_AUTO_LOGIN: "true"
           # Optionally map user groups from Authentik to Grafana roles
           GF_AUTH_GENERIC_OAUTH_ROLE_ATTRIBUTE_PATH: "{{ lookup('env', 'grafana_sso_role_map') }}"
+        labels:
+          com.centurylinklabs.watchtower.enable: "true"
         networks:
           - name: monitoring_network
         user: "{{ uid }}:{{ gid }}"
