--- a/ansible/playbooks/deployment/docker_portainer_agent.yaml
+++ b/ansible/playbooks/deployment/docker_portainer_agent.yaml
@@ -13,6 +13,8 @@
         restart_policy: always
         ports:
           - "9001:9001"
+        labels:
+          com.centurylinklabs.watchtower.enable: "true"
         volumes:
           - /var/run/docker.sock:/var/run/docker.sock
           - /var/lib/docker/volumes:/var/lib/docker/volumes
