--- a/docker-compose/ansible-semaphore/compose.yaml
+++ b/docker-compose/ansible-semaphore/compose.yaml
@@ -37,6 +37,8 @@ services:
       - SEMAPHORE_ACCESS_KEY_ENCRYPTION=${encryption_key}  # generate with command: head -c32 /dev/urandom | base64
       - ANSIBLE_HOST_KEY_CHECKING=false  # (optional) change to true if you want to enable host key checking
       - TZ=America/Sao_Paulo
+    labels:
+      - "com.centurylinklabs.watchtower.enable: true"
     volumes:
       - /opt/semaphore/config:/etc/semaphore
       - /opt/semaphore/data:/var/lib/semaphore
