--- a/docker-compose/ansible-semaphore/compose.yaml
+++ b/docker-compose/ansible-semaphore/compose.yaml
@@ -38,7 +38,7 @@ services:
       - ANSIBLE_HOST_KEY_CHECKING=false  # (optional) change to true if you want to enable host key checking
       - TZ=America/Sao_Paulo
     labels:
-      - "com.centurylinklabs.watchtower.enable: true"
+      - com.centurylinklabs.watchtower.enable=true
     volumes:
       - /opt/semaphore/config:/etc/semaphore
       - /opt/semaphore/data:/var/lib/semaphore
